fix: overflow page projets

--- a/pages/css/projects.css
+++ b/pages/css/projects.css
@@ -1,4 +1,6 @@
-
+*{
+    overflow-x: hidden;
+}
 .subcontainer{
     margin: 50px 0 ;
     padding: 20px;
